# Danmaku-Source-Project

./: .gitignore  DESIGN.md  FRONTEND.md  MICROSERVICES.md  PROJECT_DOCUMENTATION.md  PROJECT_OVERVIEW.md  ProjectStatus.md  Readme.md  TECH_STACK.md
backend/: Cargo.toml  build.rs
backend/migrations/: 001_initial_schema.sql  002_auth_and_discussion.sql
backend/proto/: bilibili.dm.proto
backend/src/: main.rs
backend/src/cache/: mod.rs
backend/src/crawler/: mod.rs
backend/src/db/: mod.rs
backend/src/models/: mod.rs
backend/src/parser/: mod.rs
backend/src/protobuf/: mod.rs
backend/src/provider/: bilibili.rs  mod.rs  traits.rs
backend/src/result/: mod.rs
backend/src/server/: mod.rs
backend/src/throttle/: mod.rs
client/danmaku_client/: README.md  pubspec.yaml
client/danmaku_client/android/app/: build.gradle.kts
client/danmaku_client/ios/Runner/: Info.plist
client/danmaku_client/ios/Runner.xcodeproj/: project.pbxproj
client/danmaku_client/lib/: api_client.dart  main.dart
client/danmaku_client/linux/: CMakeLists.txt
client/danmaku_client/linux/runner/: my_application.cc
client/danmaku_client/macos/Runner.xcodeproj/: project.pbxproj
client/danmaku_client/test/: widget_test.dart
client/danmaku_client/web/: index.html  manifest.json
client/danmaku_client/windows/: CMakeLists.txt
client/danmaku_client/windows/runner/: Runner.rc  main.cpp
frontend/: next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/components/category/: category-layout.tsx
frontend/src/components/layout/: header.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
java-backend/: pom.xml
java-backend/movie-common/: pom.xml
java-backend/movie-crawler/: pom.xml
java-backend/movie-danmaku/: pom.xml
java-backend/movie-discussion/: pom.xml
java-backend/movie-file/: pom.xml
java-backend/movie-gateway/: pom.xml
java-backend/movie-series/: pom.xml
java-backend/movie-user/: pom.xml
(+95 files in other folders)
