[package]
name = "danmaku-server"
version = "1.1.2"
edition = "2021"
description = "Danmaku Source Project - Backend Server"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
quick-xml = "0.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prost = "0.13"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
