[package]
name = "danmaku-server"
version = "4.2.0"
edition = "2021"
description = "Danmaku Source Project - Backend Server"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
reqwest = { version = "0.12", features = ["json", "gzip", "deflate"] }
quick-xml = "0.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prost = "0.13"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
flate2 = "1.0"
futures = "0.3"
redis = { version = "0.25", features = ["tokio-comp"] }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"

[build-dependencies]
prost-build = "0.13"
